2010-08-18  Glenn Morris  <rgm@gnu.org>

	* ob.el: Require org when compiling.
	(org-save-outline-visibility): Remove macro declaration.
	* ob-emacs-lisp.el: Require ob-comint when compiling, for macros.
	Remove unnecessary/macro declarations.
	* org-docview.el: Require doc-view when compiling.
	(doc-view-goto-page): Autoload rather than declaring.
	(doc-view-current-page): Remove macro declaration.

2010-08-17  Glenn Morris  <rgm@gnu.org>

	* ob.el (tramp-compat-make-temp-file, org-edit-src-code)
	(org-entry-get, org-table-import): Fix declarations.
	(org-match-string-no-properties): Remove unnecessary declaration.
	* ob-sh.el (org-babel-comint-in-buffer)
	(org-babel-comint-wait-for-output, org-babel-comint-buffer-livep)
	(org-babel-comint-with-output): Remove unnecessary declarations.
	* ob-R.el (orgtbl-to-tsv): Fix declaration.
	* org-list.el (org-entry-get): Fix declaration.

2010-07-19  Eric Schulte  <schulte.eric@gmail.com>

	* ob-C.el: New file.
	* ob-R.el: New file.
	* ob-asymptote.el: New file.
	* ob-clojure.el: New file.
	* ob-comint.el: New file.
	* ob-css.el: New file.
	* ob-ditaa.el: New file.
	* ob-dot.el: New file.
	* ob-emacs-lisp.el: New file.
	* ob-eval.el: New file.
	* ob-exp.el: New file.
	* ob-gnuplot.el: New file.
	* ob-haskell.el: New file.
	* ob-keys.el: New file.
	* ob-latex.el: New file.
	* ob-lob.el: New file.
	* ob-matlab.el: New file.
	* ob-mscgen.el: New file.
	* ob-ocaml.el: New file.
	* ob-octave.el: New file.
	* ob-perl.el: New file.
	* ob-python.el: New file.
	* ob-ref.el: New file.
	* ob-ruby.el: New file.
	* ob-sass.el: New file.
	* ob-screen.el: New file.
	* ob-sh.el: New file.
	* ob-sql.el: New file.
	* ob-sqlite.el: New file.
	* ob-table.el: New file.
	* ob-tangle.el: New file.
	* ob.el: New file.

2010-07-19  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-mks.el: New file.
	* org-capture.el: New file.

2010-07-19  Christian Egli  <christian.egli@sbszh.ch>

	* org-taskjuggler.el: New file.
